# bunsui

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
dev_note/: README.md
dev_note/design/: ai-integration-design.md
dev_note/roadmap/: bunsui-roadmap.md
dev_note/tasks/: README.md  phase1-core-development.md  phase2-advanced-features.md  task-template.md
docs/: PUBLISHING.md  conf.py  index.rst
docs/api/: modules.rst
docs/architecture/: sequence-diagrams.md  system-design.md  technology-selection.md
docs/examples/: basic-pipeline.md  etl-pipeline.md  ml-pipeline.md
docs/guides/developer/: architecture.md  contributing.md  performance-optimization.md
docs/guides/user/: cli-reference.md  dsl-reference.md  getting-started.md
examples/: sample-pipeline.yaml
scripts/: README.md  check-code.sh  check_code.py  release.sh
src/bunsui/: __init__.py
src/bunsui/auth/: __init__.py  authenticator.py  middleware.py  rbac.py  token_manager.py
src/bunsui/aws/: __init__.py  client.py  exceptions.py  retry.py
src/bunsui/aws/dynamodb/: __init__.py  client.py  repository.py  schemas.py
src/bunsui/aws/ecs/: client.py
src/bunsui/aws/lambda/: client.py
src/bunsui/aws/s3/: __init__.py  client.py
src/bunsui/aws/stepfunctions/: __init__.py  asl_generator.py  client.py  pipeline_executor.py
src/bunsui/cli/: __init__.py  interactive.py  main.py
src/bunsui/cli/commands/: __init__.py  config.py  init.py  logs.py  pipeline.py  session.py
src/bunsui/core/: __init__.py  exceptions.py
src/bunsui/core/config/: __init__.py  manager.py  models.py
src/bunsui/core/logging/: service.py
src/bunsui/core/models/: __init__.py  pipeline.py  session.py
src/bunsui/core/pipeline/: __init__.py  repository.py
src/bunsui/core/session/: __init__.py  manager.py  repository.py
src/bunsui/core/storage/: __init__.py
src/bunsui/dsl/: parser.py  schema.py  templating.py  validator.py
src/bunsui/logging/: structured_logger.py
src/bunsui/performance/: __init__.py  batch.py  cache.py  connection_pool.py  profiler.py
src/bunsui/tui/: app.py
tests/: __init__.py  conftest.py
tests/core/session/: test_session.py
tests/e2e/: test_pipeline_execution.py
tests/integration/: test_aws_integration.py
tests/localstack/: docker-compose.yml
tests/performance/: test_load.py  test_optimization.py
tests/unit/: test_dsl_parser.py
tutorial/: QUICK_START.md  README.md  TUTORIAL.md  sample_pipeline.yaml  simple_pipeline.yaml
